# software-testing-homework1

./: .travis.yml  CMakeLists.txt  README.md  draft.org
src/: commissionMachine.hpp  commissionMchine.cpp  nextDateMachine.cpp  nextDateMachine.hpp  triangleMachine.cpp  triangleMachine.hpp
tests/: main.cpp
tests/pathTesting/: commission.cpp  nextDate.cpp  triangle.cpp
tests/src/: commission.cpp  commissionBoundaryTestcase.hpp  commissionDecisionTableTestcase.hpp  commissionTestValue.hpp  nextDate.cpp  nextDateBoundaryTestcase.hpp  nextDateDecisionTableTestcase.hpp  nextDateEquvalenceClssTestcase.hpp  nextDateTestValue.hpp  triangle.cpp  triangleBoundaryTestcase.hpp  triangleDecisionTableTestcase.hpp  triangleEquivalenceClassTestcass.hpp  triangleTestValue.hpp
